Fix PMD issues