@@ -27,39 +27,40 @@ import org.apache.commons.jxpath.Variables;
 public class CoreOperationTest extends JXPathTestCase {
     private JXPathContext context;
 
+    @Override
     public void setUp() {
         if (context == null) {
             context = JXPathContext.newContext(null);
-            Variables vars = context.getVariables();
-            vars.declareVariable("integer", new Integer(1));
+            final Variables vars = context.getVariables();
+            vars.declareVariable("integer", Integer.valueOf(1));
             vars.declareVariable("array", new double[] { 0.25, 0.5, 0.75 });
-            vars.declareVariable("nan", new Double(Double.NaN));
+            vars.declareVariable("nan", Double.valueOf(Double.NaN));
         }
     }
 
     public void testInfoSetTypes() {
 
         // Numbers
-        assertXPathValue(context, "1", new Double(1.0));
+        assertXPathValue(context, "1", Double.valueOf(1.0));
         assertXPathPointer(context, "1", "1");
-        assertXPathValueIterator(context, "1", list(new Double(1.0)));
+        assertXPathValueIterator(context, "1", list(Double.valueOf(1.0)));
 
         assertXPathPointerIterator(context, "1", list("1"));
 
-        assertXPathValue(context, "-1", new Double(-1.0));
-        assertXPathValue(context, "2 + 2", new Double(4.0));
-        assertXPathValue(context, "3 - 2", new Double(1.0));
-        assertXPathValue(context, "1 + 2 + 3 - 4 + 5", new Double(7.0));
-        assertXPathValue(context, "3 * 2", new Double(3.0 * 2.0));
-        assertXPathValue(context, "3 div 2", new Double(3.0 / 2.0));
-        assertXPathValue(context, "5 mod 2", new Double(1.0));
+        assertXPathValue(context, "-1", Double.valueOf(-1.0));
+        assertXPathValue(context, "2 + 2", Double.valueOf(4.0));
+        assertXPathValue(context, "3 - 2", Double.valueOf(1.0));
+        assertXPathValue(context, "1 + 2 + 3 - 4 + 5", Double.valueOf(7.0));
+        assertXPathValue(context, "3 * 2", Double.valueOf(3.0 * 2.0));
+        assertXPathValue(context, "3 div 2", Double.valueOf(3.0 / 2.0));
+        assertXPathValue(context, "5 mod 2", Double.valueOf(1.0));
 
         // This test produces a different result with Xalan?
-        assertXPathValue(context, "5.9 mod 2.1", new Double(1.0));
+        assertXPathValue(context, "5.9 mod 2.1", Double.valueOf(1.0));
 
-        assertXPathValue(context, "5 mod -2", new Double(1.0));
-        assertXPathValue(context, "-5 mod 2", new Double(-1.0));
-        assertXPathValue(context, "-5 mod -2", new Double(-1.0));
+        assertXPathValue(context, "5 mod -2", Double.valueOf(1.0));
+        assertXPathValue(context, "-5 mod 2", Double.valueOf(-1.0));
+        assertXPathValue(context, "-5 mod -2", Double.valueOf(-1.0));
         assertXPathValue(context, "1 < 2", Boolean.TRUE);
         assertXPathValue(context, "1 > 2", Boolean.FALSE);
         assertXPathValue(context, "1 <= 1", Boolean.TRUE);
@@ -75,7 +76,7 @@ public class CoreOperationTest extends JXPathTestCase {
         assertXPathValue(context, "1 > 2 = 0", Boolean.TRUE);
         assertXPathValue(context, "1 = 2", Boolean.FALSE);
 
-        assertXPathValue(context, "$integer", new Double(1), Double.class);
+        assertXPathValue(context, "$integer", Double.valueOf(1), Double.class);
 
         assertXPathValue(context, "2 + 3", "5.0", String.class);
 
