@@ -32,6 +32,7 @@ import org.apache.commons.jxpath.TestBean;
 public class DynamicPropertiesModelTest extends JXPathTestCase {
     private JXPathContext context;
 
+    @Override
     public void setUp() {
         if (context == null) {
             context = JXPathContext.newContext(new TestBean());
@@ -95,9 +96,9 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
             context,
             "/.[@name='map'][@name='Key2'][@name='name']",
             "/map[@name='Key2']/name");
-                        
+
         ((Map)context.getValue("map")).put("Key:3", "value3");
-        
+
         assertXPathValueAndPointer(
             context,
             "/map[@name='Key:3']",
@@ -112,17 +113,17 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
     }
 
     public void testSetPrimitiveValue() {
-        assertXPathSetValue(context, "map/Key1", new Integer(6));
+        assertXPathSetValue(context, "map/Key1", Integer.valueOf(6));
     }
 
     public void testSetCollection() {
-        // See if we can assign a whole collection        
+        // See if we can assign a whole collection
         context.setValue(
             "map/Key1",
-            new Integer[] { new Integer(7), new Integer(8)});
+            new Integer[] { Integer.valueOf(7), Integer.valueOf(8)});
 
         // And then an element in that collection
-        assertXPathSetValue(context, "map/Key1[1]", new Integer(9));
+        assertXPathSetValue(context, "map/Key1[1]", Integer.valueOf(9));
     }
 
     /**
@@ -131,16 +132,16 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
      */
     public void testSetNewKey() {
         // Using a "simple" path
-        assertXPathSetValue(context, "map/Key4", new Integer(7));
-        
+        assertXPathSetValue(context, "map/Key4", Integer.valueOf(7));
+
         // Using a "non-simple" path
         assertXPathPointerLenient(context, "//map/Key5", "/map/Key5");
-        
-        assertXPathSetValue(context, "//map/Key5", new Integer(8));
+
+        assertXPathSetValue(context, "//map/Key5", Integer.valueOf(8));
     }
 
     public void testCreatePath() {
-        TestBean bean = (TestBean) context.getContextBean();
+        final TestBean bean = (TestBean) context.getContextBean();
         bean.setMap(null);
 
         // Calls factory.createObject(..., testBean, "map"), then
@@ -153,7 +154,7 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
     }
 
     public void testCreatePathAndSetValue() {
-        TestBean bean = (TestBean) context.getContextBean();
+        final TestBean bean = (TestBean) context.getContextBean();
         bean.setMap(null);
 
         // Calls factory.createObject(..., testBean, "map"), then
@@ -166,7 +167,7 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
     }
 
     public void testCreatePathCreateBean() {
-        TestBean bean = (TestBean) context.getContextBean();
+        final TestBean bean = (TestBean) context.getContextBean();
         bean.setMap(null);
 
         // Calls factory.createObject(..., testBean, "map"), then
@@ -175,12 +176,12 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
         assertXPathCreatePath(
             context,
             "/map[@name='TestKey2']/int",
-            new Integer(1),
+            Integer.valueOf(1),
             "/map[@name='TestKey2']/int");
     }
 
     public void testCreatePathAndSetValueCreateBean() {
-        TestBean bean = (TestBean) context.getContextBean();
+        final TestBean bean = (TestBean) context.getContextBean();
         bean.setMap(null);
 
         // Calls factory.createObject(..., testBean, "map"), then
@@ -189,12 +190,12 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
         assertXPathCreatePathAndSetValue(
             context,
             "/map[@name='TestKey2']/int",
-            new Integer(4),
+            Integer.valueOf(4),
             "/map[@name='TestKey2']/int");
     }
 
     public void testCreatePathCollectionElement() {
-        TestBean bean = (TestBean) context.getContextBean();
+        final TestBean bean = (TestBean) context.getContextBean();
         bean.setMap(null);
 
         assertXPathCreatePath(
@@ -212,7 +213,7 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
     }
 
     public void testCreatePathAndSetValueCollectionElement() {
-        TestBean bean = (TestBean) context.getContextBean();
+        final TestBean bean = (TestBean) context.getContextBean();
         bean.setMap(null);
 
         assertXPathCreatePathAndSetValue(
@@ -230,14 +231,14 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
     }
 
     public void testCreatePathNewCollectionElement() {
-        TestBean bean = (TestBean) context.getContextBean();
+        final TestBean bean = (TestBean) context.getContextBean();
         bean.setMap(null);
 
         // Create an element of a dynamic map element, which is a collection
         assertXPathCreatePath(
             context,
             "/map/TestKey4[1]/int",
-            new Integer(1),
+            Integer.valueOf(1),
             "/map[@name='TestKey4'][1]/int");
 
         bean.getMap().remove("TestKey4");
@@ -246,19 +247,19 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
         assertXPathCreatePath(
             context,
             "/map/TestKey4[1]/int",
-            new Integer(1),
+            Integer.valueOf(1),
             "/map[@name='TestKey4'][1]/int");
     }
 
     public void testCreatePathAndSetValueNewCollectionElement() {
-        TestBean bean = (TestBean) context.getContextBean();
+        final TestBean bean = (TestBean) context.getContextBean();
         bean.setMap(null);
 
         // Create an element of a dynamic map element, which is a collection
         assertXPathCreatePathAndSetValue(
             context,
             "/map/TestKey4[1]/int",
-            new Integer(2),
+            Integer.valueOf(2),
             "/map[@name='TestKey4'][1]/int");
 
         bean.getMap().remove("TestKey4");
@@ -267,12 +268,12 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
         assertXPathCreatePathAndSetValue(
             context,
             "/map/TestKey4[1]/int",
-            new Integer(3),
+            Integer.valueOf(3),
             "/map[@name='TestKey4'][1]/int");
     }
 
     public void testRemovePath() {
-        TestBean bean = (TestBean) context.getContextBean();
+        final TestBean bean = (TestBean) context.getContextBean();
         bean.getMap().put("TestKey1", "test");
 
         // Remove dynamic property
@@ -284,7 +285,7 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
     }
 
     public void testRemovePathArrayElement() {
-        TestBean bean = (TestBean) context.getContextBean();
+        final TestBean bean = (TestBean) context.getContextBean();
 
         bean.getMap().put("TestKey2", new String[] { "temp1", "temp2" });
         context.removePath("map[@name = 'TestKey2'][1]");
@@ -293,12 +294,12 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
             "temp2",
             context.getValue("map[@name = 'TestKey2'][1]"));
     }
-    
-    public void testCollectionOfMaps() {
-        TestBean bean = (TestBean) context.getContextBean();
-        List list = new ArrayList();
 
-        bean.getMap().put("stuff", list);        
+    public void testCollectionOfMaps() {
+        final TestBean bean = (TestBean) context.getContextBean();
+        final List list = new ArrayList();
+
+        bean.getMap().put("stuff", list);
 
         Map m = new HashMap();
         m.put("fruit", "apple");
@@ -320,28 +321,28 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
         assertXPathValueIterator(
             context,
             "/map/stuff[@name='fruit']",
-            list("apple", "banana"));        
+            list("apple", "banana"));
     }
 
     public void testMapOfMaps() {
-        TestBean bean = (TestBean) context.getContextBean();
+        final TestBean bean = (TestBean) context.getContextBean();
 
-        Map fruit = new HashMap();
+        final Map fruit = new HashMap();
         fruit.put("apple", "green");
         fruit.put("orange", "red");
-        
-        Map meat = new HashMap();
+
+        final Map meat = new HashMap();
         meat.put("pork", "pig");
         meat.put("beef", "cow");
-        
-        bean.getMap().put("fruit", fruit);        
-        bean.getMap().put("meat", meat);        
-                
+
+        bean.getMap().put("fruit", fruit);
+        bean.getMap().put("meat", meat);
+
         assertXPathPointer(
             context,
             "//beef",
             "/map[@name='meat'][@name='beef']");
-        
+
         assertXPathPointer(
             context,
             "map//apple",
@@ -349,8 +350,8 @@ public class DynamicPropertiesModelTest extends JXPathTestCase {
 
         // Ambiguous search - will return nothing
         assertXPathPointerLenient(context, "map//banana", "null()");
-        
-        // Unambiguous, even though the particular key is missing 
+
+        // Unambiguous, even though the particular key is missing
         assertXPathPointerLenient(
             context,
             "//fruit/pear",
